# asimov-xai-module

./: CHANGES.md  Cargo.toml  README.md
.asimov/: module.yaml
.github/workflows/: ci.yaml  release.yaml
src/: lib.rs
src/prompter/: main.rs
